; ModuleID = '/home/carl/AnghaBench/reactos/drivers/multimedia/audio/sb16_nt4.old/extr_control.c_SetOutputSampleRate.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/multimedia/audio/sb16_nt4.old/extr_control.c_SetOutputSampleRate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [21 x i8] c"Setting sample rate\0A\00", align 1
@SbSetOutputRate = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SetOutputSampleRate(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = call i32 @DPRINT(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @SbSetOutputRate, align 4
  %8 = call i32 @SbWriteData(i32 %6, i32 %7)
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* %4, align 4
  %11 = sdiv i32 %10, 256
  %12 = call i32 @SbWriteData(i32 %9, i32 %11)
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* %4, align 4
  %15 = srem i32 %14, 256
  %16 = call i32 @SbWriteData(i32 %13, i32 %15)
  %17 = load i32, i32* @TRUE, align 4
  ret i32 %17
}

declare dso_local i32 @DPRINT(i8*) #1

declare dso_local i32 @SbWriteData(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
